crates/mabo-parser/tests/snapshots/parser__error@alias_name.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: alias sImple = Simple;
input_file: crates/mabo-parser/tests/inputs/invalid/alias_name.mabo
snapshot_kind: text
---
mabo::parse::alias_def (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/struct.ParseAliasError.html)

  × Failed to parse alias declaration
  ╰─▶ Invalid alias name
   ╭─[invalid/alias_name.mabo:1:7]
 1 │ alias sImple = Simple;
   ·       ▲
   ·       ╰── In this declaration
   ╰────
  help: Expected alias declaration in the form `❬B❭alias <Alias> = <Type>;❬B❭`

Error: mabo::parse::alias_def::invalid_name (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/enum.ParseAliasCause.html#variant.InvalidName)

  × Invalid alias name
   ╭─[invalid/alias_name.mabo:1:7]
 1 │ alias sImple = Simple;
   ·       ▲
   ·       ╰── Problematic character
   ╰────
  help: Alias names must start with an uppercase letter (❬Y❭A-Z❬Y❭), followed by zero or more alphanumeric characters
        (❬Y❭A-Z, a-z, 0-9❬Y❭)
