crates/mabo-parser/tests/snapshots/parser__error@alias_tuple_empty.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: alias Sample = ();
input_file: crates/mabo-parser/tests/inputs/invalid/alias_tuple_empty.mabo
snapshot_kind: text
---
mabo::parse::alias_def (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/struct.ParseAliasError.html)

  × Failed to parse alias declaration
  ├─▶ Failed to parse type definition
  ├─▶ Failed to parse type definition
  ╰─▶ error Verify
   ╭─[invalid/alias_tuple_empty.mabo:1:17]
 1 │ alias Sample = ();
   ·                 ▲
   ·                 ╰── In this declaration
   ╰────
  help: Expected alias declaration in the form `❬B❭alias <Alias> = <Type>;❬B❭`

Error: mabo::parse::type_def (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/struct.ParseTypeError.html)

  × Failed to parse type definition
  ├─▶ Failed to parse type definition
  ╰─▶ error Verify
   ╭─[invalid/alias_tuple_empty.mabo:1:16]
 1 │ alias Sample = ();
   ·                ┬
   ·                ╰── In this declaration
   ╰────
  help: Expected type definition in the form `❬B❭<Name>❬B❭`

Error: mabo::parse::type_def (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/struct.ParseTypeError.html)

  × Failed to parse type definition
  ╰─▶ error Verify
   ╭─[invalid/alias_tuple_empty.mabo:1:17]
 1 │ alias Sample = ();
   ·                 ▲
   ·                 ╰── In this declaration
   ╰────
  help: Expected type definition in the form `❬B❭<Name>❬B❭`

Error: 
  × error Verify
