crates/mabo-parser/tests/snapshots/parser__error@field_name.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "struct Sample {\n    1value: u32 @1,\n}"
input_file: crates/mabo-parser/tests/inputs/invalid/field_name.mabo
---
mabo::parse::struct_def (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/struct.ParseStructError.html)

  × Failed to parse struct declaration
  ├─▶ Failed to parse fields declaration
  ╰─▶ Invalid field name
   ╭─[invalid/field_name.mabo:1:1]
 1 │ ╭─▶ struct Sample {
 2 │ │       1value: u32 @1,
 3 │ ├─▶ }
   · ╰──── In this declaration
   ╰────
  help: Expected struct declaration in the form `❬B❭struct <Name> {...}❬B❭`

Error: mabo::parse::id (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/struct.ParseFieldsError.html)

  × Failed to parse fields declaration
  ╰─▶ Invalid field name
   ╭─[invalid/field_name.mabo:1:15]
 1 │ ╭─▶ struct Sample {
 2 │ ├─▶     1value: u32 @1,
   · ╰──── In this declaration
 3 │     }
   ╰────
  help: Expected fields declaration in the form `❬B❭{ <named>, <named>, ... }❬B❭`, `❬B❭( <unnamed>, <unnamed>, ... )
        ❬B❭` or `❬B❭_nothing_❬B❭`

Error: mabo::parse::fields::named::invalid_name (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/enum.ParseFieldsCause.html#variant.InvalidName)

  × Invalid field name
   ╭─[invalid/field_name.mabo:2:5]
 1 │ struct Sample {
 2 │     1value: u32 @1,
   ·     ▲
   ·     ╰── Problematic character
 3 │ }
   ╰────
  help: Field names must start with a lowercase letter (❬Y❭a-z❬Y❭), followed by zero or more lowercase alphanumeric
        characters or underscores (❬Y❭a-z, 0-9, _❬Y❭)

