crates/mabo-parser/tests/snapshots/parser__error@struct_name.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "struct sample {\n    value: u32 @1,\n}"
input_file: crates/mabo-parser/tests/inputs/invalid/struct_name.mabo
---
mabo::parse::struct_def (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/struct.ParseStructError.html)

  × Failed to parse struct declaration
  ╰─▶ Invalid struct name
   ╭─[invalid/struct_name.mabo:1:1]
 1 │ ╭─▶ struct sample {
 2 │ │       value: u32 @1,
 3 │ ├─▶ }
   · ╰──── In this declaration
   ╰────
  help: Expected struct declaration in the form `❬B❭struct <Name> {...}❬B❭`

Error: mabo::parse::struct_def::invalid_name (https://docs.rs/mabo-parser/0.1.0/mabo_parser/error/enum.ParseStructCause.html#variant.InvalidName)

  × Invalid struct name
   ╭─[invalid/struct_name.mabo:1:1]
 1 │ struct sample {
   ·        ▲
   ·        ╰── Problematic character
 2 │     value: u32 @1,
   ╰────
  help: Struct names must start with an uppercase letter (❬Y❭A-Z❬Y❭), followed by zero or more alphanumeric
        characters (❬Y❭A-Z, a-z, 0-9❬Y❭)

